--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".MenuActivity" />
         <activity
             android:name=".FoodRecoveryActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".FeedBackActivity" />
         <activity
             android:name=".InventoryActivity"
