--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.calnourish">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    s
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -12,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:windowSoftInputMode="adjustResize"
-        android:theme="@style/AppTheme">
-        <activity android:name=".SplashAcivity" >
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="adjustResize">
+        <activity android:name=".IndividualItemActivity"></activity>
+        <activity android:name=".SplashAcivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,19 +25,16 @@
         <activity android:name=".InfoActivity" />
         <activity
             android:name=".SearchActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"
-                />
+                android:resource="@xml/searchable" />
         </activity>
-
-
-
         <activity android:name=".MenuActivity" />
         <activity
             android:name=".FoodRecoveryActivity"
@@ -46,7 +43,7 @@
         <activity
             android:name=".InventoryActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".CommunityAgreementActivity"></activity>
+        <activity android:name=".CommunityAgreementActivity" />
     </application>
 
 </manifest>
