--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // DeployGate Testing dependency
+        classpath 'com.deploygate:gradle:2.0.1'
     }
 }
 
